correct sumbited error

--- a/resume/index.html
+++ b/resume/index.html
@@ -14,8 +14,10 @@
           <h1 class="white"><span id="resumeName"></span></h1>
           <p class="white"><span id="resdesig"></span></p>
         </div>
-        <img id="resImg" src="profile
-        pic.JPG" alt="" />
+        <img id="resImg" src="profilepic.JPG" alt="" />
+
+
+
       </header>
 
       <div class="content">
